# Roitboard

./: apt.sh  hostapd说明.txt  riotboard安装dollycam流程.txt  编译dollycam流程.txt
dolly/scripts/: README  killall.sh
dolly/scripts/hostapd/: hostapd.conf  runwifi.jano  runwifi.sh  runwifi.sh.bak  test.sh
dolly/source/: README  libralies_list
dolly/source/dollycam/: CMakeLists.txt
dolly/source/dollycam/CMAKE/: FindGphoto2.cmake
dolly/source/dollycam/src/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  camera.h  cameraConfig.cpp  cameraConfig.h  dollycam.cpp  robo.cpp  robo.h  serial  serial.c  webService.cpp  webService.h
dolly/source/dollycam/src/.svn/: all-wcprops  entries
dolly/source/dollycam/src/.svn/text-base/: CMakeLists.txt.svn-base  camera.cpp.svn-base  camera.h.svn-base  cameraConfig.cpp.svn-base  cameraConfig.h.svn-base  dollycam.cpp.svn-base  webService.cpp.svn-base  webService.h.svn-base
dolly/source/dollycam/src/soap/: dolly.wsdl  dollySOAP.getConfig.res.xml  dollySOAP.sendCmd.req.xml  soapC.c  soapServerLib.c
dolly/source/dollycam/src/soap/.svn/: all-wcprops  entries
dolly/source/dollycam/src/soap/.svn/text-base/: dollySOAP.getConfig.req.xml.svn-base  dollySOAP.nsmap.svn-base  dollySOAP.sendCmd.res.xml.svn-base  dollySoap.h.svn-base  soapH.h.svn-base  soapServer.c.svn-base  soapStub.h.svn-base
dolly/source/mjpg-streamer/: Makefile  mjpg_streamer  mjpg_streamer.c  run.sh
dolly/source/mjpg-streamer/plugins/input_control/.svn/: entries
dolly/source/mjpg-streamer/plugins/input_file/: input_file.c
dolly/source/mjpg-streamer/plugins/input_file/.svn/: entries
dolly/source/mjpg-streamer/plugins/input_testpicture/: testpictures.h
dolly/source/mjpg-streamer/www/: stream.html
(+15 files in other folders)
